--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   ui-tests:
     docker:
-      - image: cimg/openjdk:11.0.10-browsers
+      - image: circleci/openjdk:8u265-jdk-browsers
     steps:
       - checkout
       - restore_cache:
@@ -20,7 +20,7 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-   
+
       - run:
           name: Running tests
           command: mvn clean test
