--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <selenium.java.version>3.141.59</selenium.java.version>
         <webdrivermanager.version>4.4.1</webdrivermanager.version>
         <javautil.version>1.8.0</javautil.version>
-<!--        <maven.compiler.source>11</maven.compiler.source>-->
-<!--        <maven.compiler.target>11</maven.compiler.target>-->
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <suiteXmlFile>src/test/resources/smoke.xml</suiteXmlFile>
         <aspect.version>1.9.6</aspect.version>
         <alluremaven.version>2.10.0</alluremaven.version>
