--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,11 @@
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jacksomyaml}</version>
         </dependency>
-
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-testng-adaptor</artifactId>
+            <version>1.5.4</version>
+        </dependency>
 
 
     </dependencies>
